RESOLVED FIXED209609
[GStreamer] Fix missing NULL-check in setSyncOnClock
https://bugs.webkit.org/show_bug.cgi?id=209609
Summary [GStreamer] Fix missing NULL-check in setSyncOnClock
Charlie Turner
Reported 2020-03-26 10:49:07 PDT
[GStreamer] Fix missing NULL-check in setSyncOnClock
Attachments
Patch (1.52 KB, patch)
2020-03-26 10:50 PDT, Charlie Turner
no flags
Charlie Turner
Comment 1 2020-03-26 10:50:56 PDT
EWS
Comment 2 2020-03-26 13:43:58 PDT
Committed r259073: <https://trac.webkit.org/changeset/259073> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394627 [details].
Radar WebKit Bug Importer
Comment 3 2020-03-26 13:44:17 PDT
Note You need to log in before you can comment on or make changes to this bug.