[GStreamer] Fix missing NULL-check in setSyncOnClock https://bugs.webkit.org/show_bug.cgi?id=209609

Unreviewed, simple fix.


* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::setSyncOnClock): Some systems are configured so that
audio sinks are not available. Make sure not to crash when asking
to sync with a NULL sink.


Canonical link: https://commits.webkit.org/222547@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259073 268f45cc-cd09-0410-ab3c-d52691b4dbfc